# Yume

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Yume.sln  premake5.lua  setup.bat  vcpkg.json
Demos/Box/: premake5.lua
Demos/Box/src/: Box.cpp  Box.h
Demos/RetroArcade/src/: RetroArcade.cpp  RetroArcade.h  RetroArcadePass.h
Demos/Shapes/: premake5.lua
Demos/Shapes/Shaders/: PS.hlsl  VS.hlsl
Demos/Shapes/src/: FrameResource.cpp  FrameResource.h  RenderItem.h  Shapes.cpp  Shapes.h
Sandbox/: CMakeLists.txt  Sandbox.cpp  Sandbox.vcxproj  main.cpp
Sandbox/src/: Sandbox.cpp  Sandbox.h
Yume/: CMakeLists.txt  Yume.vcxproj  Yume.vcxproj.filters  premake5.lua
Yume/assets/shaders/: compute.slang  shader.slang
Yume/cmake/: CompileShaders.cmake  utils.cmake
Yume/src/: AsyncResourceManager.h  Camera.h  Components.h  CullingSystem.h  ECS.h  EventSystem.h  HotReloadResourceManager.h  Main.cpp  Material.h  Mesh.h  RenderGraph.h  Resource.h  ResourceManager.cpp  Shader.h  Texture.h  Yume.h  ympch.cpp  ympch.h
Yume/src/Core/: Application.cpp  Application.h  EntryPoint.h
Yume/src/ECS/: Component.cpp  Component.h  Components.cpp  Components.h  Entity.h
Yume/src/EventSystem/: Event.h  EventBus.h  EventDispatcher.h  EventListener.h
Yume/src/Rendering/Core/: RenderGraph.h  RenderPass.h  RenderPassManager.h  RenderTarget.h  Renderer.cpp  Renderer.h  ShaderCompiler.h
Yume/src/Rendering/Passes/: GeometryPass.h  LightingPass.h  PostProcessPass.h
Yume/src/Rendering/Resources/: Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Yume/src/ResourceManagement/: Resource.h  ResourceManager.cpp
Yume/src/Resources/: HotReloadResourceManager.h  ResourceManager.h
Yume/src/Scene/: BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  CullingSystem.h  Light.h  Scene.h  ThirdPersonCamera.cpp  ThirdPersonCamera.h
Yume/src/ServiceLocator/: ServiceLocator.h
Yume/src/Services/: FileUtils.h  ShaderCompiler.cpp  ShaderCompiler.h
Yume/src/Services/EventSystem/: Event.h  EventBus.h
Yume/src/Services/ResourceManager/: HotReloadResourceManager.h  Resource.h  ResourceHandle.h  ResourceManager.h
Yume/src/Yume/: API.h  Application.cpp  Application.h  Core.h  D3D12Renderer.cpp  D3D12Renderer.h  EntryPoint.h  Geometry.cpp  Geometry.h  Log.cpp  Log.h  Mesh.cpp  Mesh.h  PostProessPass.h  RenderContext.h  ShaderManager.h  StepTimer.h  Texture.h  TextureManager.h  UploadBuffer.cpp  UploadBuffer.h  Window.cpp  Window.h
Yume/src/Yume/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Yume/src/Yume/Utility/: Type.h  Utility.cpp  Utility.h
